@@ -58,7 +58,7 @@ namespace ClangCommon
         {
             get
             {
-                return Bam.Core.TokenizedString.CreateVerbatim("xcrun");
+                return Bam.Core.TokenizedString.CreateVerbatim(ConfigureUtilities.xcrunPath);
             }
         }
 
